--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Test Current File",
+            "name": "Launch Package",
             "type": "go",
             "request": "launch",
-            "mode": "test",
-            "program": "${workspaceFolder}/${relativeFileDirname}",
-            "showLog": true
+            "mode": "auto",
+            "program": "${fileDirname}"
         }
     ]
 }
